--- a/web.config
+++ b/web.config
@@ -2,6 +2,7 @@
     <system.webServer>
         <staticContent>
             <mimeMap fileExtension=".json" mimeType="application/json" />
+            <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
         </staticContent>
     </system.webServer>
 </configuration>
