--- a/manifests.json
+++ b/manifests.json
@@ -29,6 +29,10 @@
             {
                 "title": "Florence Nightingale (audio)",
                 "uri": "http://wellcomelibrary.org/iiif/b17307922/manifest"
+            },
+            {
+                "title": "Fungal disease in Britain and the United States (PDF)",
+                "uri": "http://wellcomelibrary.org/iiif/collection/b20432963"
             }
         ]
     },
