--- a/web.config
+++ b/web.config
@@ -4,5 +4,17 @@
             <mimeMap fileExtension=".json" mimeType="application/json" />
             <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
         </staticContent>
+        <rewrite>
+            <rules>
+                <!--
+                map: http://universalviewer.azurewebsites.net/uv-[*]/lib/embed.js
+                to:  http://universalviewer.azurewebsites.net/uv-[current]/lib/embed.js
+                -->
+                <rule name="build" stopProcessing="true">
+                     <match url="^uv-([^/]+)/(.*)" />
+                     <action type="Rewrite" url="uv-1.2.10/{R:2}" />
+                </rule>
+            </rules>
+        </rewrite>
     </system.webServer>
 </configuration>
