--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "jquery": "~1.11.2",
     "json-editor": "~0.7.13",
+    "jquery-plugins": "edsilv/jquery-plugins#~0.0.10",
     "foundation": "~5.5.0",
     "fontawesome": "~4.2.0",
     "jmespath.js": "~0.12.0",
