--- a/manifests.json
+++ b/manifests.json
@@ -33,6 +33,10 @@
             {
                 "title": "Fungal disease in Britain and the United States (PDF)",
                 "uri": "http://wellcomelibrary.org/iiif/b17502792/manifest"
+            },
+            {
+                "title": "First Thursday Club (login required)",
+                "uri": "http://wellcomelibrary.org/iiif/b17564980/manifest"
             }
         ]
     },
