--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "jquery-plugins": "edsilv/jquery-plugins#~0.0.10",
     "foundation": "~5.5.0",
     "fontawesome": "~4.2.0",
-    "jmespath.js": "~0.12.0",
+    "jmespath.js": "git@github.com:edsilv/jmespath.js.git#~0.12.4",
     "utils": "edsilv/utils#~0.0.14"
   },
   "devDependencies": {},
