--- a/lib/jmespath.js/package.json
+++ b/lib/jmespath.js/package.json
@@ -10,13 +10,25 @@
   "homepage": "https://github.com/jmespath/jmespath.js",
   "contributors": [],
   "devDependencies": {
+    "del": "^1.2.0",
     "grunt": "^0.4.4",
     "grunt-contrib-jshint": "^0.11.0",
-    "mocha": "^2.1.0",
     "grunt-contrib-uglify": "^0.7.0",
-    "grunt-eslint": "^6.0.0"
+    "grunt-eslint": "^6.0.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-eslint": "^0.15.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0",
+    "lodash": "^3.10.0",
+    "mocha": "^2.1.0",
+    "path": "^0.11.14",
+    "run-sequence": "^1.1.1",
+    "yargs": "^3.15.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "gulp": "^3.9.0"
+  },
   "main": "jmespath.js",
   "directories": {
     "test": "test"
