--- a/lib/utils/bower.json
+++ b/lib/utils/bower.json
@@ -1,22 +1,25 @@
 {
-    "name": "utils",
-    "version": "0.0.14",
-    "homepage": "https://github.com/edsilv/utils",
-    "authors": [
-        "edsilv <e.silverton@gmail.com>"
-    ],
-    "description": "utilities",
-    "main": "/dist/utils.js",
-    "moduleType": [
-        "globals"
-    ],
-    "keywords": [],
-    "license": "MIT",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ]
+  "name": "utils",
+  "version": "0.0.20",
+  "homepage": "https://github.com/edsilv/utils",
+  "authors": [
+    "edsilv <e.silverton@gmail.com>"
+  ],
+  "description": "utilities",
+  "main": "/dist/utils.js",
+  "moduleType": [
+    "globals"
+  ],
+  "keywords": [],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "extensions": "edsilv/extensions#~0.1.3"
+  }
 }
