--- a/manifests.json
+++ b/manifests.json
@@ -58,19 +58,19 @@
           "@id": "http://wellcomelibrary.org/iiif/b17564980/manifest",
           "@type": "sc:Manifest",
           "label": "First Thursday Club (login required)",
-          "visible": false
+          "visible": true
         },
         {
           "@id": "http://wellcomelibrary.org/iiif/b1818893x/manifest",
           "@type": "sc:Manifest",
           "label": "Correspondence Concerning Publication (click through)",
-          "visible": false
+          "visible": true
         },
         {
           "@id": "http://wellcomelibrary.org/iiif/b17307703/manifest",
           "@type": "sc:Manifest",
           "label": "I Remember Sir Henry Dale (audio, click through)",
-          "visible": false
+          "visible": true
         },
         {
           "@id": "http://wellcomelibrary.org/iiif/b11599820/manifest",
@@ -91,7 +91,7 @@
           "@id": "/examples/manifest/missingimages.js",
           "@type": "sc:Manifest",
           "label": "Missing Images (jsonp)",
-          "visible": false
+          "visible": true
         }
       ]
     },
