--- a/manifests.json
+++ b/manifests.json
@@ -57,20 +57,17 @@
         {
           "@id": "http://wellcomelibrary.org/iiif/b17564980/manifest",
           "@type": "sc:Manifest",
-          "label": "First Thursday Club (login required)",
-          "visible": true
+          "label": "First Thursday Club (login required)"
         },
         {
           "@id": "http://wellcomelibrary.org/iiif/b1818893x/manifest",
           "@type": "sc:Manifest",
-          "label": "Correspondence Concerning Publication (click through)",
-          "visible": true
+          "label": "Correspondence Concerning Publication (click through)"
         },
         {
           "@id": "http://wellcomelibrary.org/iiif/b17307703/manifest",
           "@type": "sc:Manifest",
-          "label": "I Remember Sir Henry Dale (audio, click through)",
-          "visible": true
+          "label": "I Remember Sir Henry Dale (audio, click through)"
         },
         {
           "@id": "http://wellcomelibrary.org/iiif/b11599820/manifest",
@@ -86,6 +83,23 @@
           "@id": "http://wellcomelibrary.org/iiif/collection/b19974760",
           "@type": "sc:Manifest",
           "label": "Chemist & Druggist (collection)"
+        },
+        {
+          "@id": "http://wellcomelibrary.org/iiif/collection/b18031511",
+          "@type": "sc:Manifest",
+          "label": "Biological Basis of Medicine (collection)"
+        },
+        {
+          "@id": "http://showcase.iiif.io/shims/chroniclingamerica/prezi/top.json",
+          "@type": "sc:Manifest",
+          "label": "Chronicling America (collection)",
+          "visible": false
+        },
+        {
+          "@id": "http://showcase.iiif.io/shims/wales/potter/top.json",
+          "@type": "sc:Manifest",
+          "label": "Potter's Electric News (collection)",
+          "visible": false
         }
       ]
     },
@@ -174,7 +188,7 @@
           "@id": "/examples/manifest/missingimages.js",
           "@type": "sc:Manifest",
           "label": "Missing Images",
-          "visible": false
+          "visible": true
         },
         {
           "@id": "/examples/manifest/deephierarchylongtitle.js",
@@ -186,7 +200,7 @@
           "@id": "/examples/manifest/attribution.js",
           "@type": "sc:Manifest",
           "label": "Attribution",
-          "visible": true
+          "visible": false
         }
       ]
     }
