--- a/manifests.json
+++ b/manifests.json
@@ -412,7 +412,7 @@
       "@id": "http://universalviewer.io/manifests.json",
       "@type": "sc:Collection",
       "label": "IPFS",
-      "visible": true,
+      "visible": false,
       "manifests": [
         {
           "@id": "https://ipfs.io/ipfs/QmYomyCpT1vKNovYvTjAStYq31JoaH8xdivjmWcDj5mpM1",
