--- a/manifests.json
+++ b/manifests.json
@@ -67,7 +67,7 @@
         {
           "@id": "http://wellcomelibrary.org/iiif/b17564980/manifest",
           "@type": "sc:Manifest",
-          "label": "First Thursday Club (login required)"
+          "label": "First Thursday Club (click through)"
         },
         {
           "@id": "http://wellcomelibrary.org/iiif/b19813508/manifest",
@@ -90,6 +90,11 @@
           "label": "Sixteen feet in profile (degraded image)"
         },
         {
+          "@id": "http://wellcomelibrary.org/iiif/b21072061/manifest",
+          "@type": "sc:Manifest",
+          "label": "An Atlas of Clinical Microscopy (clinical login)"
+        },
+        {
           "@id": "http://wellcomelibrary.org/iiif/b19684538/manifest",
           "@type": "sc:Manifest",
           "label": "Pseudo-Albert the Great (folio)"
@@ -108,11 +113,6 @@
           "@id": "http://wellcomelibrary.org/iiif/b21274344/manifest",
           "@type": "sc:Manifest",
           "label": "Abnormalities and curiosities of medicine"
-        },
-        {
-          "@id": "http://wellcomelibrary.org/iiif/b21072061/manifest",
-          "@type": "sc:Manifest",
-          "label": "An Atlas of Clinical Microscopy (clinical)"
         },
         {
           "@id": "http://wellcomelibrary.org/iiif/b13266330/manifest",
